# zoomcamp-project

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  visualization.ipynb
alembic/: env.py
alembic/versions/: 2024_06_12_1047-2f4c23103199_test.py  2024_06_12_1258-b4f0f81e6797_property_model.py
app/: __init__.py  db.py  settings.py
app/models/: properties.py  test.py
app/routers/: api_router.py  data_importer.py  statistics.py
app/schemas/: statistics.py
app/services/: data.py  statistics.py  utils.py
static/: data_30000_sample.csv
tests/services/: test_data_import.py  test_statistics.py
