[project]
name = "zoomcamp-project"
version = "0.1.0"
description = "ZoomCamp home assignment project"
authors = [
    { name = "Lolomgrofl", email = "luka.vuksanovic@hey.com" }
]
dependencies = [
    "fastapi[all]>=0.111.0",
    "pydantic>=2.7.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "loguru>=0.7.2",
    "pymysql>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "cookiecutter>=2.6.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
